[gd_scene load_steps=6 format=3 uid="uid://dn024niuautu2"]

[ext_resource type="Theme" uid="uid://bjvi4gbyjhody" path="res://UI/menus_do_teste.tres" id="1_wsa52"]
[ext_resource type="Script" path="res://UI/tela_pré_teste.gd" id="2_5dpv8"]
[ext_resource type="Texture2D" uid="uid://gjdr64kgj75v" path="res://assets/logo.png" id="2_r67qy"]
[ext_resource type="Texture2D" uid="uid://bewxoofa1r3lc" path="res://assets/icons/music_note/music_note_normal.svg" id="3_qcp2b"]
[ext_resource type="Texture2D" uid="uid://d4kijdj4ncevo" path="res://assets/icons/speaker/speaker_normal.svg" id="4_yf7qv"]

[node name="TelaPréTeste" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wsa52")
script = ExtResource("2_5dpv8")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wsa52")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(1152, 1674)
layout_mode = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRectLogo" type="TextureRect" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.098
anchor_top = 0.013
anchor_right = 0.902
anchor_bottom = 0.137
offset_left = -0.396011
offset_top = 0.237999
offset_right = 0.395752
offset_bottom = -0.338028
texture = ExtResource("2_r67qy")
expand_mode = 3

[node name="LabelConfiguração" type="Label" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.145
anchor_right = 1.0
anchor_bottom = 0.2
offset_top = 0.269958
offset_bottom = 0.199982
theme_override_colors/font_color = Color(0.333333, 0.298039, 0.282353, 1)
theme_override_font_sizes/font_size = 64
text = "Configuração de parâmetros"
horizontal_alignment = 1

[node name="LabelProfissional" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.235
anchor_right = 0.49
anchor_bottom = 0.269
offset_left = 0.527992
offset_top = 0.609985
offset_right = -0.47998
offset_bottom = -0.306091
theme_override_font_sizes/font_size = 48
text = "Profissional"

[node name="LineEditProfissional" type="LineEdit" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.495
anchor_top = 0.235
anchor_right = 0.953
anchor_bottom = 0.274
offset_left = -0.240051
offset_top = 0.609985
offset_right = 0.143921
offset_bottom = -0.676056
theme_override_font_sizes/font_size = 48
placeholder_text = "ID profissional"
alignment = 1

[node name="LabelNúmeroDeAlvos" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.293
anchor_right = 0.49
anchor_bottom = 0.326
offset_left = 0.527977
offset_top = -0.482086
offset_right = -0.47998
offset_bottom = 0.275879
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Número de alvos"

[node name="LineEditNúmeroDeAlvos" type="LineEdit" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.495
anchor_top = 0.293
anchor_right = 0.952
anchor_bottom = 0.331
offset_left = -0.240051
offset_top = -0.482056
offset_right = 1.29602
offset_bottom = -0.0940552
theme_override_font_sizes/font_size = 48
text = "10"
alignment = 1

[node name="LabelRepetição" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.35
anchor_right = 0.49
anchor_bottom = 0.384
offset_left = 0.527992
offset_top = 0.0999146
offset_right = -0.47998
offset_bottom = -0.81604
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Repetição máxima"

[node name="LineEditRepetição" type="LineEdit" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.495
anchor_top = 0.35
anchor_right = 0.953
anchor_bottom = 0.388
offset_left = -0.240112
offset_top = 0.0999146
offset_right = 0.143921
offset_bottom = 0.487915
theme_override_font_sizes/font_size = 48
text = "3"
alignment = 1

[node name="LabelRequisito" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.407
anchor_right = 0.49
anchor_bottom = 0.441
offset_left = 0.527992
offset_top = 0.682007
offset_right = -0.47998
offset_bottom = -0.23407
theme_override_font_sizes/font_size = 48
text = "Requisito"

[node name="OptionButtonRequisito" type="OptionButton" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.407
anchor_right = 0.953
anchor_bottom = 0.446
offset_left = -0.240051
offset_top = 0.682007
offset_right = 0.143799
offset_bottom = -0.604065
theme_override_font_sizes/font_size = 48
alignment = 1
selected = 1
item_count = 2
popup/item_0/text = "Apenas um alvo"
popup/item_1/text = "Todos os alvos"
popup/item_1/id = 1

[node name="LabelVelocidade" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.465
anchor_right = 0.49
anchor_bottom = 0.498
offset_left = 0.527992
offset_top = -0.410095
offset_right = -0.47998
offset_bottom = 0.347778
theme_override_font_sizes/font_size = 48
text = "Velocidade"

[node name="OptionButtonVelocidade" type="OptionButton" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.465
anchor_right = 0.953
anchor_bottom = 0.503
offset_left = -0.240051
offset_top = -0.410095
offset_right = 0.143799
offset_bottom = -0.0220947
theme_override_font_sizes/font_size = 48
alignment = 1
selected = 2
item_count = 4
popup/item_0/text = "Estático"
popup/item_1/text = "Lento"
popup/item_1/id = 1
popup/item_2/text = "Médio"
popup/item_2/id = 2
popup/item_3/text = "Rápido"
popup/item_3/id = 3

[node name="LabelVidas" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.522
anchor_right = 0.49
anchor_bottom = 0.556
offset_left = 0.527992
offset_top = 0.171997
offset_right = -0.47998
offset_bottom = -0.744202
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Vidas"

[node name="LineEditVidas" type="LineEdit" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.495
anchor_top = 0.522
anchor_right = 0.952
anchor_bottom = 0.56
offset_left = -0.240112
offset_top = 0.171997
offset_right = 1.2959
offset_bottom = 0.559875
theme_override_font_sizes/font_size = 48
text = "10"
alignment = 1

[node name="LabelDuração" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.579
anchor_right = 0.49
anchor_bottom = 0.613
offset_left = 0.527992
offset_top = 0.754639
offset_right = -0.47998
offset_bottom = -0.162231
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Duração (s)"

[node name="LineEditDuração" type="LineEdit" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.495
anchor_top = 0.579
anchor_right = 0.952
anchor_bottom = 0.618
offset_left = -0.240051
offset_top = 0.754639
offset_right = 1.29602
offset_bottom = -0.531372
theme_override_font_sizes/font_size = 48
text = "120"
alignment = 1

[node name="LabelReposicionamento" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.637
anchor_right = 0.49
anchor_bottom = 0.67
offset_left = 0.527992
offset_top = -0.337402
offset_right = -0.47998
offset_bottom = 0.419922
theme_override_font_sizes/font_size = 48
text = "Reposicionamento"

[node name="OptionButtonReposicionamento" type="OptionButton" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.637
anchor_right = 0.953
anchor_bottom = 0.675
offset_left = -0.240051
offset_top = -0.337402
offset_right = 0.143799
offset_bottom = 0.0490723
theme_override_font_sizes/font_size = 48
alignment = 1
selected = 2
item_count = 3
popup/item_0/text = "Nenhum"
popup/item_1/text = "Alvo"
popup/item_1/id = 1
popup/item_2/text = "Todos"
popup/item_2/id = 2

[node name="LabelAnimações" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.694
anchor_right = 0.49
anchor_bottom = 0.728
offset_left = 0.527992
offset_top = 0.244751
offset_right = -0.47998
offset_bottom = -0.672119
theme_override_font_sizes/font_size = 48
text = "Animações
"

[node name="OptionButtonAnimações" type="OptionButton" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.694
anchor_right = 0.953
anchor_bottom = 0.732
offset_left = -0.240051
offset_top = 0.244751
offset_right = 0.143799
offset_bottom = 0.63269
theme_override_font_sizes/font_size = 48
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Ligado"
popup/item_1/text = "Desligado"
popup/item_1/id = 1

[node name="LabelExibirTempo" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.751
anchor_right = 0.49
anchor_bottom = 0.785
offset_left = 0.527992
offset_top = 0.826538
offset_right = -0.47998
offset_bottom = -0.09021
theme_override_font_sizes/font_size = 48
text = "Exibir tempo"

[node name="OptionButtonExibirTempo" type="OptionButton" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.751
anchor_right = 0.953
anchor_bottom = 0.79
offset_left = -0.240051
offset_top = 0.826538
offset_right = 0.143799
offset_bottom = -0.459229
theme_override_font_sizes/font_size = 48
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Ligado"
popup/item_1/text = "Desligado"
popup/item_1/id = 1

[node name="LabelMúsica" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.809
anchor_right = 0.49
anchor_bottom = 0.842
offset_left = 0.527992
offset_top = -0.265259
offset_right = -0.47998
offset_bottom = 0.491821
theme_override_font_sizes/font_size = 48
text = "Música"

[node name="AspectRatioContainerBotãoMúsica" type="AspectRatioContainer" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.806
anchor_right = 0.55
anchor_bottom = 0.845
offset_left = -0.240051
offset_top = 0.755859
offset_right = 0.399963
offset_bottom = -0.530029

[node name="BotãoMúsica" type="Button" parent="ScrollContainer/Control/AspectRatioContainerBotãoMúsica"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/icon = ExtResource("3_qcp2b")
icon_alignment = 1
expand_icon = true

[node name="HSliderMúsica" type="HSlider" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.563
anchor_top = 0.801
anchor_right = 0.953
anchor_bottom = 0.85
offset_left = 0.42395
offset_top = 1.12659
offset_right = -0.856079
offset_bottom = 0.100708
value = 30.0

[node name="LabelEfeitosSonoros" type="Label" parent="ScrollContainer/Control"]
layout_mode = 2
anchor_left = 0.036
anchor_top = 0.866
anchor_right = 0.49
anchor_bottom = 0.9
offset_left = 0.527992
offset_top = 0.31665
offset_right = -0.47998
offset_bottom = -0.60022
theme_override_font_sizes/font_size = 48
text = "Efeitos Sonoros"

[node name="AspectRatioContainerBotãoEfeitosSonoros" type="AspectRatioContainer" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.864
anchor_right = 0.55
anchor_bottom = 0.902
offset_left = -0.240051
offset_top = -0.83606
offset_right = 0.399963
offset_bottom = -0.44812

[node name="BotãoEfeitosSonoros" type="Button" parent="ScrollContainer/Control/AspectRatioContainerBotãoEfeitosSonoros"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/icon = ExtResource("4_yf7qv")
icon_alignment = 1
expand_icon = true

[node name="HSliderEfeitosSonoros" type="HSlider" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.563
anchor_top = 0.859
anchor_right = 0.952
anchor_bottom = 0.907
offset_left = 0.42395
offset_top = 0.034668
offset_right = 0.295898
offset_bottom = 0.682617
value = 100.0

[node name="BotãoIniciarMenu" type="Button" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.924
anchor_right = 0.49
anchor_bottom = 0.981
offset_left = 0.527992
offset_top = -0.775269
offset_right = -0.47998
offset_bottom = -0.188599
theme_override_font_sizes/font_size = 48
text = "Iniciar (menu)"

[node name="BotãoIniciarJogo" type="Button" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.924
anchor_right = 0.953
anchor_bottom = 0.981
offset_top = -0.380737
offset_right = 0.143799
offset_bottom = 0.205933
theme_override_font_sizes/font_size = 48
text = "Iniciar (jogo)"

[connection signal="focus_exited" from="ScrollContainer/Control/LineEditProfissional" to="." method="_on_line_edit_profissional_focus_exited"]
[connection signal="text_submitted" from="ScrollContainer/Control/LineEditProfissional" to="." method="_on_line_edit_profissional_text_submitted"]
[connection signal="focus_exited" from="ScrollContainer/Control/LineEditNúmeroDeAlvos" to="." method="_on_line_edit_número_de_alvos_focus_exited"]
[connection signal="text_submitted" from="ScrollContainer/Control/LineEditNúmeroDeAlvos" to="." method="_on_line_edit_número_de_alvos_text_submitted"]
[connection signal="focus_exited" from="ScrollContainer/Control/LineEditRepetição" to="." method="_on_line_edit_repetição_focus_exited"]
[connection signal="text_submitted" from="ScrollContainer/Control/LineEditRepetição" to="." method="_on_line_edit_repetição_text_submitted"]
[connection signal="item_selected" from="ScrollContainer/Control/OptionButtonRequisito" to="." method="_on_option_button_requisito_item_selected"]
[connection signal="item_selected" from="ScrollContainer/Control/OptionButtonVelocidade" to="." method="_on_option_button_velocidade_item_selected"]
[connection signal="focus_exited" from="ScrollContainer/Control/LineEditVidas" to="." method="_on_line_edit_vidas_focus_exited"]
[connection signal="text_submitted" from="ScrollContainer/Control/LineEditVidas" to="." method="_on_line_edit_vidas_text_submitted"]
[connection signal="focus_exited" from="ScrollContainer/Control/LineEditDuração" to="." method="_on_line_edit_duração_focus_exited"]
[connection signal="text_submitted" from="ScrollContainer/Control/LineEditDuração" to="." method="_on_line_edit_duração_text_submitted"]
[connection signal="item_selected" from="ScrollContainer/Control/OptionButtonReposicionamento" to="." method="_on_option_button_reposicionamento_item_selected"]
[connection signal="item_selected" from="ScrollContainer/Control/OptionButtonAnimações" to="." method="_on_option_button_animações_item_selected"]
[connection signal="item_selected" from="ScrollContainer/Control/OptionButtonExibirTempo" to="." method="_on_option_button_exibir_tempo_item_selected"]
[connection signal="button_down" from="ScrollContainer/Control/AspectRatioContainerBotãoMúsica/BotãoMúsica" to="." method="_on_botão_música_button_down"]
[connection signal="button_up" from="ScrollContainer/Control/AspectRatioContainerBotãoMúsica/BotãoMúsica" to="." method="_on_botão_música_button_up"]
[connection signal="pressed" from="ScrollContainer/Control/AspectRatioContainerBotãoMúsica/BotãoMúsica" to="." method="_on_botão_música_pressed"]
[connection signal="value_changed" from="ScrollContainer/Control/HSliderMúsica" to="." method="_on_h_slider_música_value_changed"]
[connection signal="button_down" from="ScrollContainer/Control/AspectRatioContainerBotãoEfeitosSonoros/BotãoEfeitosSonoros" to="." method="_on_botão_efeitos_sonoros_button_down"]
[connection signal="button_up" from="ScrollContainer/Control/AspectRatioContainerBotãoEfeitosSonoros/BotãoEfeitosSonoros" to="." method="_on_botão_efeitos_sonoros_button_up"]
[connection signal="pressed" from="ScrollContainer/Control/AspectRatioContainerBotãoEfeitosSonoros/BotãoEfeitosSonoros" to="." method="_on_botão_efeitos_sonoros_pressed"]
[connection signal="value_changed" from="ScrollContainer/Control/HSliderEfeitosSonoros" to="." method="_on_h_slider_efeitos_sonoros_value_changed"]
[connection signal="pressed" from="ScrollContainer/Control/BotãoIniciarMenu" to="." method="_on_botão_iniciar_menu_pressed"]
[connection signal="pressed" from="ScrollContainer/Control/BotãoIniciarJogo" to="." method="_on_botão_iniciar_jogo_pressed"]
